5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1633_2942.log
== TEST (2019-04-02 18:05:14) 
-- CODE:
print input 2 (ovos) 
-- ERROR:
File "XXXX", line 1
    print input 2 (ovos) 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:05:28) 
-- CODE:
print input (2 ovos) 
-- ERROR:
File "XXXX", line 1
    print input (2 ovos) 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:05:41) 
-- CODE:
print x=(2 ovos) 
-- ERROR:
File "XXXX", line 1
    print x=(2 ovos) 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:05:51) 
-- CODE:
print x(2 ovos) 
-- ERROR:
File "XXXX", line 1
    print x(2 ovos) 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:23) 
-- CODE:
print (¨ 12 donuts¨)
x=2
x=150
x=120
-- ERROR:
File "XXXX", line 1
    print (¨ 12 donuts¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:36) 
-- CODE:
print (¨ 12 donuts¨)
x= 2
x= 150
x= 120
-- ERROR:
File "XXXX", line 1
    print (¨ 12 donuts¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:43) 
-- CODE:
print (¨ 12 donuts¨)
x= 2
x= 150
x= 120
-- ERROR:
File "XXXX", line 1
    print (¨ 12 donuts¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:04) 
-- CODE:
print (¨12 donuts¨)
x= 2
x= 150
x= 120
-- ERROR:
File "XXXX", line 1
    print (¨12 donuts¨)
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:15) 
-- CODE:
print (¨12 donuts¨)
x= 2
x= 150
x= 120
-- ERROR:
File "XXXX", line 1
    print (¨12 donuts¨)
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:20) 
-- CODE:
print(¨12 donuts¨)
x= 2
x= 150
x= 120
-- ERROR:
File "XXXX", line 1
    print(¨12 donuts¨)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:08:51) 
-- CODE:
print(¨12 donuts¨)
x= 2 #ovos
x= 150 #leite
x= 120 #farinha
-- ERROR:
File "XXXX", line 1
    print(¨12 donuts¨)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:09:53) 
-- CODE:
#receita de 12 donuts

-- ERROR:
File "XXXX", line 1
    print(¨12 donuts¨)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:17) 
-- CODE:
print (¨receita de 12 donuts¨)

-- ERROR:
File "XXXX", line 1
    print (¨receita de 12 donuts¨)
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:27) 
-- CODE:
print (*¨receita de 12 donuts¨*)

-- ERROR:
File "XXXX", line 1
    print (*¨receita de 12 donuts¨*)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:41) 
-- CODE:
print (¨*receita de 12 donuts*¨)

-- ERROR:
File "XXXX", line 1
    print (¨*receita de 12 donuts*¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:05) 
-- CODE:
print (* ¨receita de 12 donuts¨ *)

-- ERROR:
File "XXXX", line 1
    print (* ¨receita de 12 donuts¨ *)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:12:16) 
-- CODE:
print (* ¨receita de 12 donuts¨ *)
x= 2
x=150
x=120

-- ERROR:
File "XXXX", line 1
    print (* ¨receita de 12 donuts¨ *)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:12:28) 
-- CODE:
print(*¨receita de 12 donuts¨*)
x= 2
x=150
x=120

-- ERROR:
File "XXXX", line 1
    print(*¨receita de 12 donuts¨*)
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:06) 
-- CODE:
print input(quantindade=12 donuts)


-- ERROR:
File "XXXX", line 1
    print input(quantindade=12 donuts)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:12) 
-- CODE:
 input(quantindade=12 donuts)


-- ERROR:
File "XXXX", line 1
    input(quantindade=12 donuts)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:21) 
-- CODE:
print(quantindade=12 donuts)


-- ERROR:
File "XXXX", line 1
    print(quantindade=12 donuts)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:30) 
-- CODE:
print(quantindade 12 donuts)


-- ERROR:
File "XXXX", line 1
    print(quantindade 12 donuts)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:45) 
-- CODE:
print(¨quantindade 12 donuts¨)


-- ERROR:
File "XXXX", line 1
    print(¨quantindade 12 donuts¨)
                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:16:13) 
-- CODE:
print(¨quantindade de 12 donuts¨)


-- ERROR:
File "XXXX", line 1
    print(¨quantindade de 12 donuts¨)
                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:16:41) 
-- CODE:
print(*¨quantindade de 12 donuts¨*)


-- ERROR:
File "XXXX", line 1
    print(*¨quantindade de 12 donuts¨*)
                      ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:16:51) 
-- CODE:
print(¨quantindade de 12 donuts¨)


-- ERROR:
File "XXXX", line 1
    print(¨quantindade de 12 donuts¨)
                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:26:29) 
-- CODE:
#quantidade de donuts
donuts= 2/12
donuts150/12
donuts120/12

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    donuts150/12
NameError: name 'donuts150' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:39) 
-- CODE:
print(*¨12 donuts¨*)
-- ERROR:
File "XXXX", line 1
    print(*¨12 donuts¨*)
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:44) 
-- CODE:
print(¨12 donuts¨)
-- ERROR:
File "XXXX", line 1
    print(¨12 donuts¨)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:57) 
-- CODE:
#12 donuts
-- ERROR:
File "XXXX", line 1
    print(¨12 donuts¨)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:31:15) 
-- CODE:
#12 donuts
x=2*
-- ERROR:
File "XXXX", line 2
    x=2*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:09) 
-- CODE:
#12 donuts
a=2*12
b=150
-- ERROR:
File "XXXX", line 2
    x=2*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:21) 
-- CODE:
#12 donuts
a=2*12
b=150*12
-- ERROR:
File "XXXX", line 2
    x=2*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:36) 
-- CODE:
#12 donuts
#quantidade de ovos
a= 2
b=
-- ERROR:
File "XXXX", line 4
    b=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:35:53) 
-- CODE:
a= 2x12
b=
-- ERROR:
File "XXXX", line 1
    a= 2x12
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:36:07) 
-- CODE:
a=2/12
b=
-- ERROR:
File "XXXX", line 2
    b=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:45:42) 
-- CODE:
a=2/
b=
-- EXECUTION TIME:
0.169824
-- ERROR:
  File "/home/codebench/codes/1633/2942/main.py", line 1
    a=2/
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:38) 
-- CODE:
(12 donuts)

-- ERROR:
File "XXXX", line 1
    (12 donuts)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:46:42) 
-- CODE:
(12 donuts)

-- EXECUTION TIME:
0.139354
-- ERROR:
  File "/home/codebench/codes/1633/2942/main.py", line 1
    (12 donuts)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:47:55) 
-- CODE:
a=2.12
b=150.12
c=120.12
-- EXECUTION TIME:
0.193017
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:

-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:47:57) 
-- CODE:
a=2.12
b=150.12
c=120.12
-- ERROR:
File "XXXX", line 1
    (12 donuts)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:09) 
-- CODE:
a=2.12
b=150.12
c=120.12
-- EXECUTION TIME:
0.235311
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:

-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
